# talking-stickies-mod

./: Cargo.toml  package-lock.json  package.json
dnas/talking-stickies/workdir/: dna.yaml
dnas/talking-stickies/zomes/coordinator/syn/: Cargo.toml
dnas/talking-stickies/zomes/integrity/syn/: Cargo.toml
holochain_storage/databases/: db.key
holochain_storage/databases/conductor/: conductor  conductor-shm  conductor-wal
holochain_storage/databases/wasm/: wasm-shm
holochain_storage/ks/: lair-keystore-config.yaml  store_file  store_file-shm  store_file-wal
ui-customer/: package.json  vite.config.ts.timestamp-1733030747977-24ca54c65b05e.mjs
ui-customer/src/: CartStore.ts  store.ts
ui-scanner/: package.json
ui-scanner/src/: App.svelte  CartStore.ts  Controller.svelte  TalkingStickiesPane.svelte  board.ts  store.ts
ui/src/: CartStore.ts  TalkingStickiesPane.svelte  store.ts
workdir/: happ.yaml
