[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.5.0-rc"
hdk = "0.4.0-rc"
serde = "1"
mio = "0.8"  # Add this specific version
tokio = { version = "1.0", features = ["full"] }
holochain_types = "0.3.2"
hc_zome_syn_coordinator = { path = "../syn/zomes/syn/coordinator" }
hc_zome_syn_integrity = { path = "../syn/zomes/syn/integrity" }

[workspace.dependencies.talking-stickies]
path = "dnas/talking-stickies/zomes/coordinator/talking-stickies"

[workspace.dependencies.talking-stickies_integrity]
path = "dnas/talking-stickies/zomes/integrity/talking-stickies"

[workspace.dependencies.profiles]
path = "dnas/talking-stickies/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/talking-stickies/zomes/integrity/profiles"